# openapi-main.yaml
@@ -44,11 +44,10 @@ components:
         - destination
         - departureTime
         - arrivalTime
-        - status
+        - capacity
+        - planeId
+        - gate
       properties:
-        id:
-          type: integer
-          format: int64
         flightNumber:
           type: string
           example: TO1234
@@ -64,8 +63,8 @@ components:
         arrivalTime:
           type: string
           format: date-time
-        status:
-          $ref: '#/components/schemas/FlightStatus'
+        capacity:
+          type: integer
         planeId:
           type: integer
           nullable: true
@@ -73,9 +72,7 @@ components:
           type: array
           items:
             type: integer
-        capacity:
-          type: integer
-          readOnly: true
+     
     PlaneState:
       type: string
       enum:
